# live-caption

./: .gitignore  DISTRIBUTION.md  LiveCaptions.icns  PACKAGING.md  README.md  SETUP_MACOS.txt  create_dmg.sh  create_icon.sh  make_placeholder_icon.sh  package.sh
src/: asrproc.c  audiocap-ca.c  audiocap-internal.h  audiocap.c  common.h  line-gen.c  line-gen.h  livecaptions-window.c  livecaptions-window.h  livecaptions-window.ui  main.c  meson.build  style.css
